src/test/ui/type-alias-impl-trait/structural-match-no-leak.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/structural-match-no-leak.rs:4:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: `impl Send` cannot be used in patterns
  --> $DIR/structural-match-no-leak.rs:18:9
   |
LL |         LEAK_FREE => (),
   |         ^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

